--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328]
+[env:leonardo]
 platform = atmelavr
-board = nanoatmega328
+board = leonardo
 framework = arduino
 lib_deps = fastled/FastLED@^3.7.0
